force-app/main/default/objects/SurveyResponse__c/SurveyResponse__c.object-meta.xml
<CustomObject>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR - {000000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>