force-app/main/default/objects/SurveyResponse__c/fields/SurveyVersion__c.field-meta.xml
<CustomField>
    <fullName>SurveyVersion__c</fullName>
    <label>Survey Version</label>
    <referenceTo>SurveyVersion__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>